# AarcEntitlement

./: .readthedocs.yaml  Makefile  README.rst  setup.cfg  setup.py  tox.ini
aarc_entitlement/: __init__.py  test_entitlement.py  test_entitlements.py
doc/source/: common.rst  conf.py  index.rst
docs/source/: requirements.txt
