[metadata]
name = aarc_entitlement
summary = Parse and compare entitlements according to the AARC recommendations G002 and G069 (https://aarc-community.org/guidelines/aarc-g002)
description-file = README.md
description-content-type = text/markdown; charset=UTF-8

author = Marcus Hardt
author-email = hardt@kit.edu

home-page = https://github.com/kit-scc/AarcEntitlement
project_urls =
    Bug Tracker = https://github.com/KIT-SCC/AarcEntitlement/issues
    Documentation = https://aarc-g002-entitlement.readthedocs.io/en/latest/

license = MIT
license_file = LICENSE

classifier =
    Development Status :: 3 - Alpha
    Environment :: Console
    Environment :: Web Environment
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Natural Language :: English
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: System :: Systems Administration
    Topic :: System :: Systems Administration :: Authentication/Directory
    Topic :: Utilities

[bdist_wheel]
universal = 1

[files]
packages =
    aarc_entitlement
